# delu-day-ahead-forecast

./: .gitignore  CLAUDE.md  Mid_M_0_Gate.md  README.md  aws-extension-spec_v1_0.md  aws-extension-spec_v1_1.md  capstone_V6_1-to-V6_2-amendments.md  capstone_V6_2-to-V6_3-amendments.md  capstone_V6_2.md  capstone_V6_3.md  engineering-role.md  four_subspaces.py  gaussian_elimination.py  notebooklm-role.md  ols_projection_error.py  orchestrator-role.md  program-stage-sequence-v3.md  program-stage-sequence-v4.md  program-stage-sequence.md  progress.md  pyproject.toml  syllabus_v3_0-to-v3_1-amendments.md  syllabus_v3_0.md  syllabus_v3_1-to-v3_2-amendments.md  syllabus_v3_1.md  syllabus_v3_2.md
docs/: spike-feed-status.md
scripts/: q1_basic_access.py  q2_vintage_probe.py  q3_resolution.py  q4_15min_boundary.py  q5_archive_depth.py  q6_smard_cross.py  q8_sftp.py
src/spike/: entsoe_helpers.py
