[project]
name = "delu-price-forecast"
version = "0.1.0"
description = "DE-LU day-ahead electricity price forecasting capstone"
requires-python = ">=3.11"
dependencies = [
    "entsoe-py==0.8.0",
    "pandas>=2.2",
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spike"]
